# TradeExpert

./: LICENSE  README.md
TradeExpert/: pyproject.toml
TradeExpert/src/tradeexpert/: __init__.py
