[project]
name = "tradeexpert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kamilos124" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tradeexpert = "tradeexpert:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
