[project]
name = "tradeexpert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kamil-Troszczynski" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
]

[project.scripts]
tradeexpert = "tradeexpert:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
